FIX: Close nav when navigating on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,22 @@
 body {
   color: #374151;
 }
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border-left-color: rgb(102, 102, 102);
+
+  animation: spin 0.4s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
